# conutil

./: .gitignore  README.md  main.py  package-lock.json  package.json  pyproject.toml  types.d.ts
app/: globals.css  layout.tsx  page.tsx
assets/: dashed-box-svg.tsx
components/layout/: footer.tsx  header.tsx
components/shared/: compression-settings-card.tsx  image-carousel.tsx  statistics-section.tsx  upload-box.tsx
components/ui/: button.tsx  input.tsx
constants/: index.ts
conutil/: __init__.py  cli.py  converter.py
conutil/gui/: __init__.py  resources_rc.py  ui_file.py  ui_main.py
conutil/gui/qrc/: resources.qrc
conutil/gui/ui/: ui_main.ui
core/: compressor.ts  web-worker.ts
lib/: utils.ts
